Fix mobile product name being misaligned in new type scale

--- a/src/govuk/components/header/_index.scss
+++ b/src/govuk/components/header/_index.scss
@@ -64,7 +64,7 @@
   }
 
   .govuk-header__product-name {
-    $product-name-offset: 10px;
+    $product-name-offset: if($govuk-new-typography-scale, 7px, 10px);
     $product-name-offset-tablet: 5px;
 
     @include govuk-font-size($size: 24, $line-height: 1);
